@@ -1,0 +1,33 @@
+# Generated by Django 3.0.12 on 2021-02-10 11:05
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('data', '0136_auto_20210126_0250'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='audit',
+            name='status',
+            field=models.CharField(blank=True, choices=[('partner_contacted', 'IP Contacted'), ('field_visit', 'Field Visit'), ('draft_issued_to_partner', 'Draft Report Issued to IP'), ('comments_received_by_partner', 'Comments Received from IP'), ('draft_issued_to_unicef', 'Draft Report Issued to UNICEF'), ('comments_received_by_unicef', 'Comments Received from UNICEF'), ('report_submitted', 'Report Submitted'), ('final', 'Final Report'), ('cancelled', 'Cancelled')], db_index=True, max_length=30, null=True),
+        ),
+        migrations.AddField(
+            model_name='auditspecial',
+            name='status',
+            field=models.CharField(blank=True, choices=[('partner_contacted', 'IP Contacted'), ('field_visit', 'Field Visit'), ('draft_issued_to_partner', 'Draft Report Issued to IP'), ('comments_received_by_partner', 'Comments Received from IP'), ('draft_issued_to_unicef', 'Draft Report Issued to UNICEF'), ('comments_received_by_unicef', 'Comments Received from UNICEF'), ('report_submitted', 'Report Submitted'), ('final', 'Final Report'), ('cancelled', 'Cancelled')], db_index=True, max_length=30, null=True),
+        ),
+        migrations.AddField(
+            model_name='microassessment',
+            name='status',
+            field=models.CharField(blank=True, choices=[('partner_contacted', 'IP Contacted'), ('field_visit', 'Field Visit'), ('draft_issued_to_partner', 'Draft Report Issued to IP'), ('comments_received_by_partner', 'Comments Received from IP'), ('draft_issued_to_unicef', 'Draft Report Issued to UNICEF'), ('comments_received_by_unicef', 'Comments Received from UNICEF'), ('report_submitted', 'Report Submitted'), ('final', 'Final Report'), ('cancelled', 'Cancelled')], db_index=True, max_length=30, null=True),
+        ),
+        migrations.AddField(
+            model_name='spotcheckfindings',
+            name='status',
+            field=models.CharField(blank=True, choices=[('partner_contacted', 'IP Contacted'), ('field_visit', 'Field Visit'), ('draft_issued_to_partner', 'Draft Report Issued to IP'), ('comments_received_by_partner', 'Comments Received from IP'), ('draft_issued_to_unicef', 'Draft Report Issued to UNICEF'), ('comments_received_by_unicef', 'Comments Received from UNICEF'), ('report_submitted', 'Report Submitted'), ('final', 'Final Report'), ('cancelled', 'Cancelled')], db_index=True, max_length=30, null=True),
+        ),
+    ]
