@@ -9,6 +9,7 @@ from model_utils import Choices
 from etools_datamart.apps.mart.data.loader import EtoolsLoader
 from etools_datamart.apps.mart.data.models.audit_engagement import EngagementMixin
 from etools_datamart.apps.mart.data.models.base import EtoolsDataMartModel
+from etools_datamart.apps.sources.etools.enrichment.consts import AuditEngagementConsts
 from etools_datamart.apps.sources.etools.models import AuditAudit, AuditFinancialfinding, AuditKeyinternalcontrol
 
 from .partner import Partner
@@ -58,6 +59,9 @@ class Audit(EtoolsDataMartModel):
     )
 
     engagement_type = models.CharField(max_length=300, blank=True, null=True, choices=TYPES, db_index=True)
+    status = models.CharField(max_length=30, blank=True, null=True,
+                              choices=AuditEngagementConsts.DISPLAY_STATUSES,
+                              db_index=True)
 
     # Engagement Overview Card
     agreement = models.CharField(max_length=300, blank=True, null=True)
