@@ -6,6 +6,7 @@
 * removed dbtemplates
 * added location gateway endpoint
 * fixed xls illegal char issue
+* fam added status
 
 
 3.2
